<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Geodesia</string>
	<string name="title_section1">Section 1</string>
	<string name="title_section2">Section 2</string>
	<string name="title_section3">Section 3</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_example">Example action</string>
	<string name="action_settings">Settings</string>
	
	<string name="subtitulo_presentacion">Presentación de la aplicación</string>
	<string name="conversion_coordenadas">Conversión de coordenadas</string>
	<string name="geodesicas_utm">Geodésicas a UTM</string>
	<string name="utm_geodesicas">UTM a geodésicas</string>
	<string name="anamorfosis_lineal">Anamorfosis lineal</string>
	<string name="coordenadas_geodesicas">Coordenadas geodésicas</string>
	<string name="coordenadas_utm">Coordenadas UTM</string>
	<string name="convergencia">Convergencia de meridianos</string>
	<string name="distancias">Conversión de distancias</string>
	<string name="reducida_utm">Distancia reducida a UTM</string>
	<string name="utm_reducida">Distancia UTM a reducida</string>
	
	<string name="generar_informe">Generar informe de cálculo</string>
	<string name="enviar_informe">Enviar informe por correo</string>
	
	<string name="presentacion1">Aplicación para todo tipo de cálculos geodésicos, e impresión de resutlados en un archivo de texto. Esta opción se encuentra en el botón "menú" del dispositivo.</string>
	<string name="presentacion2">Aplicación desarrollada por Víctor Palma Carrasco, Ingeniero técnico en Topografía, y Android Developer especializado en aplicaciones para Topografía, Geodesia e Ingeniería Civil.</string>
	
	<string name="ficheros_texto">Ejemplos de fichero de texto.</string>
	<string name="sub_ficheros_texto">Para poder leer las coordenadas de un fichero de texto, el fichero debe tener una estructura específica. Presiona este recuadro para generar un fichero de ejemplo, según la herramienta utilizada.</string>
	<string name="geodesicas_utm_pres">Transformación de coordenadas geodésicas en coordenadas UTM, a través del problema directo.</string>
	
	<string name="selecciona_informe">Selecciona un fichero de ejemplo</string>
	
	<string name="nuevo_elipsoide">Añadir nuevo elipsoide</string>
	<string name="anadir_coordenadas">Añadir coordenadas</string>
	<string name="desde_archivo">Desde archivo</string>
	<string name="introducir_coordenada">Introducir coordenada</string>
	<string name="lista_coordenadas">Lista de coordenadas</string>
	<string name="selecciona_elipsoide">Elipsoide</string>
	<string name="borrar_todo">Borrar todo</string>
	<string name="calcular">Calcular</string>
	<string name="coordenadas_calculadas">Coordenadas calculadas</string>
	
	<string name="latitud">Latitud</string>
	<string name="longitud">Longitud</string>
	<string name="longitud_mc">Longitud meridiano central</string>
	<string name="grados">Grados</string>
	<string name="minutos">Minutos</string>
	<string name="segundos">Segundos</string>
	
	<string name="aceptar">Aceptar</string>
	<string name="cancelar">Cancelar</string>
	<string name="atras">Atrás</string>
	
	<string name="recuerda">Recuerda</string>
	<string name="recuerda_hemisferio_sur">En el hemisferio sur, la latitud debe tener valor negativo</string>
	<string name="recuerda_continente_americano">Para el continente americano, los valores de longitud, y longitud del meridiano central, deben ser negativos.</string>
	<string name="no_valores_vacios">No se pueden dejar valores vacíos</string>
	
	<string name="selecciona_archivo">Selecciona un archivo</string>
	<string name="inicio">Inicio</string>
	<string name="carpeta">Carpeta</string>
	<string name="archivo_texto">Archivo de texto</string>
	<string name="archivo_desconocido">Archivo desconocido</string>
	
	<string name="ruta_actual">Ruta actual</string>
	<string name="accion_no_permitida">Acción no permitida</string>
	<string name="fichero_de_texto">Fichero de texto</string>
	<string name="base_datos">Base de datos</string>
	<string name="Selecciona_fuente">Selecciona desde donde quieres obtener los datos</string>
	
	<string name="datos_punto">Datos del punto</string>
	<string name="hint_proyecto_nombre">Proyecto y nombre</string>
	<string name="lista_encontrados">Lista de puntos encontrados</string>
	
	
	<string name="atencion">Atención!!</string>
	<string name="no_base_datos">La aplicación Base de Datos no se encuentra disponible</string>
	<string name="comprar">Comprar</string>
	
	<string name="msg_landa_mc">Antes de seleccionar un punto, debes introducir la longitud del meridiano central correspondiente al punto que vas a seleccionar</string>
	<string name="introduzca_landa_mc">Introduce la longitud del meridiano central correspondiente a la coordenada seleccionada</string>
	<string name="selecciona_hemisferio_utm">En caso de ser coordenadas UTM, selecciona también su hemisferio</string>
	
	<string name="msg_valores_incorrectos">El archivo tiene valores incorrectos en la línea</string>
	
	<string name="elipsoides">Elipsoides</string>
	<string name="introduce_datos">Introduzca los datos del nuevo elipsoide</string>
	<string name="nombre">Nombre</string>
	<string name="semieje_a">Semieje mayor (a)</string>
	<string name="aplanamiento_f">Aplanamiento (f)</string>
	<string name="lista_elipsoides">Lista de elipsoides guardados</string>
	<string name="guardar">Guardar</string>
	<string name="cerrar">Cerrar</string>
	<string name="presiona_elipsoide">Mantén presionado un elipsoide para borrarlo</string>
	<string name="valor_registrado">Este valor ya está registrado</string>
	
	<string name="presiona_coordenada">Mantén presionada una coordenada para borrarla</string>
	<string name="selecciona_anamorfosis">Anamorfósis</string>
	<string name="nuevo_valor_anamorfosis">Nuevo valor de anamorfosis</string>
	<string name="msg_anamorfosis">Si no se selecciona ninguna anamorfósis, se tomará el valor por defecto 0.9996 (España)</string>
	
	<string name="anamorfosis">Anamorfósis</string>
	<string name="datos_anamorfosis">Introduce los datos de la nueva anamorfosis que quieres registrar</string>
	<string name="valor">Valor</string>
	<string name="valores_anamorfosis">Valores de anamorfosis registrados</string>
	<string name="borrar_fila">Manten presionada una fila para eliminarla</string>
	
	<string name="fichero_generado">Fichero generado</string>
	<string name="informe_calculo">Informe de cálculo</string>
	<string name="introduce_nombre">Introduce el nombre del fichero</string>
	<string name="ventana_no_informes">En esta ventana no se generan informes</string>
	<string name="no_calculos">No se ha realizado ningún cálculo</string>
	
	<string name="datos_entrada">Datos de entrada</string>
	<string name="proceso_calculo">Proceso de cálculo</string>
	<string name="resultados">Resultados</string>
	
	<string name="coordenada_x">Coordenada X</string>
	<string name="coordenada_y">Coordenada Y</string>
	
	<string name="debes_seleccionar_hemisferio">Debes seleccionar un hemisferio</string>
	<string name="norte">Norte</string>
	<string name="sur">Sur</string>
	
	<string name="introduzca_valores">Introduzca valores</string>
	<string name="iteracion">Iteración</string>
	<string name="valores_calculados">Valores calculados</string>
	<string name="distancias_calculadas">Distancias calculadas</string>
	<string name="valores_incorrecto_linea">Algún valor no es correcto en la línea</string>
	<string name="hemisferio_incorrecto_linea">El hemisferio no es correcto en la línea</string>
	
	<string name="msg_distancias_on">Introduce la distancia y la altura correspondiente a la coordenada seleccionada</string>
	<string name="distancia">Distancia</string>
	<string name="distancia_reducida">Distancia reducida</string>
	<string name="distancia_utm">Distancia UTM</string>
	<string name="altura">Altura</string>
	<string name="altura_elipsoidal">Altitud elipsoidal</string>
	<string name="altura_ortometrica">Altitud ortométrica</string>
	<string name="coordenadas_geo_distancia">Coordenadas geodésicas y distancia</string>
	<string name="coordenadas_utm_distancia">Coordenadas UTM y distancia</string>
	
	<string name="ejemplo">Ejemplo</string>
	
	<string name="acimut_distancia">Acimut y distancia</string>
	<string name="sub_acimut_distancia">Acimut y distancia entre dos puntos</string>
	<string name="calculo_coordenadas">Cálculo de coordenadas</string>
	<string name="lista_coordenadas_calculadas">Lista de coordenadas calculadas</string>
	<string name="resultado">Resultado</string>
	<string name="msg_dos_puntos">No puedes introducir más de dos puntos</string>
	
	<string name="acimut_utm">Acimut UTM</string>
	<string name="selecciona_hemisferio">Selecciona hemisferio</string>
	<string name="coordenadas_punto_a">Coordenadas del punto A</string>
	<string name="observaciones_punto_b">Observaciones al punto B</string>
	<string name="puntos_encontrados">Puntos encontrados</string>

</resources>