<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#333A6734" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anamorfosis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:background="#773A6734"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_anamorfosis"
        android:background="#773A6734"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#773A6734"
            android:layout_marginRight="2dip" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="5dip" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button1"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/cancelar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#773A6734"
            android:layout_marginLeft="2dip" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="5dip" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/guardar" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="#773A6734"
        android:gravity="center_horizontal"
        android:text="@string/valores_anamorfosis"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:background="#773A6734"
        android:gravity="center_horizontal"
        android:text="@string/borrar_fila"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#773A6734"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip">
    </ListView>

</LinearLayout>
